finished products apis
