# backend/src/routes/routes.ts
@@ -20,6 +20,8 @@ import { DeletePageController } from './../controllers/pages.controller';
 import { GetProductsController } from './../controllers/products.controller';
 // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 import { ProductsByCategoriesController } from './../controllers/products.controller';
+// WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+import { GetProductsDetailsController } from './../controllers/products.controller';
 import type { RequestHandler, Router } from 'express';
 
 // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
@@ -333,6 +335,31 @@ export function RegisterRoutes(app: Router) {
 
 
               const promise = controller.getproductsByCategory.apply(controller, validatedArgs as any);
+              promiseHandler(controller, promise, response, undefined, next);
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        app.get('/api/products/:category/:product_name',
+            ...(fetchMiddlewares<RequestHandler>(GetProductsDetailsController)),
+            ...(fetchMiddlewares<RequestHandler>(GetProductsDetailsController.prototype.getProductDetails)),
+
+            function GetProductsDetailsController_getProductDetails(request: any, response: any, next: any) {
+            const args = {
+                    product_name: {"in":"path","name":"product_name","required":true,"dataType":"string"},
+            };
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = getValidatedArgs(args, request, response);
+
+                const controller = new GetProductsDetailsController();
+
+
+              const promise = controller.getProductDetails.apply(controller, validatedArgs as any);
               promiseHandler(controller, promise, response, undefined, next);
             } catch (err) {
                 return next(err);
